# EISC214-Project

./: .gitignore  CMakeLists.txt  README.md  build.sh
inc/: evaluate.h  input.h  main.h  num_data.h  optimise.h  range.h  syntax_tree.h  token.h
src/: CMakeLists.txt  evaluate.c  input.c  main.c  num_data.c  optimise.c  range.c  syntax_tree.c  token.c
test/: CMakeLists.txt  test.c
